# EmojiComments

./: .gitignore  README.md  main.py  pyproject.toml
data/: emoji_comments.json
data/input/: EmoTagLabels.csv
data/output/: emoji_comments.json  emoji_final.json  emoji_formatted.json  emoji_lang.json  emoji_random.json
data/probing/: test.parquet  train.parquet
notebooks/: Analysis.ipynb
preprocessing/: __init__.py  clean_language.py  format.py  label_emoji.py
scraping/: __init__.py  channel_videos.py  video_comments.py
src/emojidata/: __init__.py
src/emojidata/preprocessing/: __init__.py  clean_language.py  format.py
src/notebooks/: Analysis.ipynb
