[project]
name = "EmojiData"
version = "0.5.0"
description = "Default template for PDM package"
dependencies = [
    "advertools==0.13.5",
    "asttokens==2.4.1",
    "attrs==23.2.0",
    "Automat==22.10.0",
    "cachetools==5.3.2",
    "certifi==2023.11.17",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "chart-studio==1.1.0",
    "comm==0.2.1",
    "constantly==23.10.4",
    "contourpy==1.2.0",
    "cryptography==41.0.7",
    "cssselect==1.2.0",
    "cycler==0.12.1",
    "debugpy==1.8.0",
    "decorator==5.1.1",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "fastjsonschema==2.19.1",
    "filelock==3.13.1",
    "fonttools==4.47.2",
    "google-api-core==2.15.0",
    "google-api-python-client==2.113.0",
    "google-auth==2.26.2",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.62.0",
    "httplib2==0.22.0",
    "hyperlink==21.0.0",
    "idna==3.6",
    "incremental==22.10.0",
    "ipykernel==6.29.0",
    "ipython==8.21.0",
    "itemadapter==0.8.0",
    "itemloaders==1.1.0",
    "jedi==0.19.1",
    "jmespath==1.0.1",
    "joblib==1.3.2",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter-client==8.6.0",
    "jupyter-core==5.7.1",
    "kiwisolver==1.4.5",
    "langdetect==1.0.9",
    "lxml==5.1.0",
    "matplotlib==3.8.2",
    "matplotlib-inline==0.1.6",
    "nbformat==5.9.2",
    "nest-asyncio==1.6.0",
    "numpy==1.26.3",
    "oauthlib==3.2.2",
    "packaging==23.2",
    "pandas==2.1.4",
    "parsel==1.8.1",
    "parso==0.8.3",
    "pexpect==4.9.0",
    "pillow==10.2.0",
    "platformdirs==4.2.0",
    "plotly==5.18.0",
    "prompt-toolkit==3.0.43",
    "Protego==0.3.0",
    "protobuf==4.25.2",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyarrow==14.0.2",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pycparser==2.21",
    "PyDispatcher==2.0.7",
    "Pygments==2.17.2",
    "pyOpenSSL==23.3.0",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "pyzmq==25.1.2",
    "queuelib==1.6.2",
    "referencing==0.33.0",
    "requests==2.31.0",
    "requests-file==1.5.1",
    "requests-oauthlib==1.3.1",
    "retrying==1.3.4",
    "rpds-py==0.17.1",
    "rsa==4.9",
    "scikit-learn==1.4.0",
    "scipy==1.12.0",
    "Scrapy==2.11.0",
    "seaborn==0.13.2",
    "service-identity==24.1.0",
    "six==1.16.0",
    "stack-data==0.6.3",
    "tenacity==8.2.3",
    "threadpoolctl==3.2.0",
    "tldextract==5.1.1",
    "tornado==6.4",
    "traitlets==5.14.1",
    "Twisted==22.10.0",
    "twython==3.9.1",
    "typing-extensions==4.9.0",
    "tzdata==2023.4",
    "uritemplate==4.1.1",
    "urllib3==2.1.0",
    "w3lib==2.1.2",
    "wcwidth==0.2.13",
    "zope-interface==6.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
